--- a/client/pages/user/components/index.less
+++ b/client/pages/user/components/index.less
@@ -1,5 +1,5 @@
 body {
-    background: transparent url(../../../../assets/images/login/bg.png) no-repeat center / cover;
+    background: transparent url(../../../assets/images/login/bg.png) no-repeat center / cover;
 }
 
 .login-box {
@@ -14,13 +14,13 @@ body {
     display: flex;
     .b-left {
         position: relative;
-        background: url(../../../../assets/images/login/leftbg.png) no-repeat;
+        background: url(../../../assets/images/login/leftbg.png) no-repeat;
         width: 210px;
         height: 320px;
         background-size: 100% 100%;
         z-index: 10;
         .logo {
-            background: url(../../../../assets/images/logo.png) no-repeat;
+            background: url(../../../assets/images/logo.png) no-repeat;
             width: 20px;
             height: 26px;
             background-size: 100% 100%;
@@ -64,7 +64,7 @@ body {
       position: absolute;
       left: -28px;
       top: -28px;
-      background: url(../../../../assets/images/login/point.png) no-repeat;
+      background: url(../../../assets/images/login/point.png) no-repeat;
       width: 118px;
       height: 230px;
       background-size: 100% 100%;
