--- a/client/components/layout/page-header/header.less
+++ b/client/components/layout/page-header/header.less
@@ -1,19 +1,25 @@
 @import "~antd/lib/style/themes/default.less";
 
-.papaya-header {
+.hum-header {
   line-height: @layout-header-height;
   height: @layout-header-height;
   background-color: @layout-header-background;
   display: flex;
   flex-shrink: 0;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.10);
 
-  & > .ant-menu {
+  &>.ant-menu {
     flex: 1;
+  }
+
+  .ant-menu-horizontal {
+    display: flex;
+    align-items: center;
+    border-bottom: 0px solid #e8e8e8;
   }
 
   .userinfo {
     margin-right: 24px;
-    color: #fff;
 
     .username {
       opacity: 0.8;
@@ -24,7 +30,6 @@
       .anticon {
         margin-right: 8px;
       }
-      color: #fff;
     }
   }
 }
