fix:修改密码优化

--- a/client/pages/changepwd/index.less
+++ b/client/pages/changepwd/index.less
@@ -8,14 +8,14 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  margin: -320px/2 0 0 -630px/2;
+  margin: -380px/2 0 0 -700px/2;
   background: #FFFFFF;
   border-radius: 4px;
   display: flex;
 
   .b-left {
     position: relative;
-    background: url(../../assets/images/login/leftbg.png) no-repeat;
+    background: url(../../assets/images/login/leftbg.png) no-repeat #ff4a5c;
     width: 210px;
     height: 100%;
     background-size: 100% 100%;
@@ -24,6 +24,7 @@ body {
     color: #FFFFFF;
     text-align: center;
     padding-top: 30px;
+    border-radius: 2px 0 0 2px;
   }
 
   .b-right {
@@ -41,6 +42,7 @@ body {
       .login-input {
         height: 40px;
       }
+
       margin: 0;
       margin-bottom: 16px;
     }
