--- a/client/pages/login/index.less
+++ b/client/pages/login/index.less
@@ -14,7 +14,8 @@ body {
     display: flex;
     .b-left {
         position: relative;
-        background: url(../../assets/images/login/leftbg.png) no-repeat;
+        background: url(../../assets/images/login/leftbg.png) no-repeat #ff4a5c;
+        border-radius: 2px 0 0 2px;
         width: 210px;
         height: 320px;
         background-size: 100% 100%;
