--- a/client/assets/index.less
+++ b/client/assets/index.less
@@ -2,6 +2,8 @@
 @import "~nprogress/nprogress.css";
 @import "~antd/lib/style/themes/default.less";
 
+@import "./iconfont/iconfont.less";
+
 // 进度条
 #nprogress {
   div.spinner {
