--- a/client/components/layout/page-header/header.less
+++ b/client/components/layout/page-header/header.less
@@ -7,6 +7,8 @@
   display: flex;
   flex-shrink: 0;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.10);
+  position: relative;
+  z-index: 100;
 
   &>.ant-menu {
     flex: 1;
