--- a/client/assets/index.less
+++ b/client/assets/index.less
@@ -11,3 +11,21 @@
     display: none;
   }
 }
+
+.hum-table-list {
+  background: #fff;
+}
+
+body {
+  .ant-input {
+    padding: 0 9px;
+  }
+  height: 100vh;
+  overflow: hidden;
+}
+
+
+// table
+.ant-table-thead>tr>th {
+  font-weight: normal !important;
+}
