--- a/client/components/layout/layout.less
+++ b/client/components/layout/layout.less
@@ -1,16 +1,16 @@
 @import "~antd/lib/style/themes/default.less";
+
 .ant-menu-dark.ant-menu-horizontal {
-    line-height: @layout-header-height;
+  line-height: @layout-header-height;
 }
 
 .ant-layout>.ant-layout {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    background: #F0F2F5;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background: #F0F2F5;
+  .hum-content-container {
+    overflow: hidden;
+    overflow-y: auto;
+  }
 }
-.hum-content {
-  margin: 20px;
-}
-
-
