--- a/client/assets/index.less
+++ b/client/assets/index.less
@@ -14,12 +14,24 @@
 
 .hum-table-list {
   background: #fff;
+
+  .ant-table {
+    font-size: 12px;
+  }
+}
+
+.page-add, .page-view, .page-preview {
+  .hum-container {
+    padding: 10px 16px;
+    background-color: #fff;
+  }
 }
 
 body {
   .ant-input {
     padding: 0 9px;
   }
+
   height: 100vh;
   overflow: hidden;
 }
