--- a/client/assets/index.less
+++ b/client/assets/index.less
@@ -36,6 +36,22 @@ body {
   overflow: hidden;
 }
 
+// modal
+.ant-modal-header {
+  padding: 12px 20px !important;
+}
+
+.ant-modal-title {
+  font-weight: normal !important;
+  font-size: 16px !important;
+}
+
+.ant-modal-close-x {
+  width: 46px !important;
+  height: 46px !important;
+  line-height: 46px !important;
+}
+
 
 // table
 .ant-table-thead>tr>th {
