--- a/client/pages/setting/power/index.less
+++ b/client/pages/setting/power/index.less
@@ -3,14 +3,14 @@
     display: flex;
     height: calc(~"100vh - 122px");
 
-    .config-tree {
+    .power-tree {
       background: #fff;
       box-shadow: 0 0 10px 0 rgba(213, 213, 213, 0.50);
       width: 30%;
       height: 100%;
     }
 
-    .config-field {
+    .power-field {
       padding: 20px 0;
       flex: 1;
       background: #FCFCFC;
